--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <kafka.version>2.3.0</kafka.version>
+        <kafka.version>2.7.0</kafka.version>
     </properties>
 
     <build>
@@ -42,9 +42,9 @@
         </dependency>
         <!-- Apache Kafka Clients-->
         <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
-            <version>${kafka.version}</version>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>2.7.2</version>
         </dependency>
         <!-- Apache Kafka Streams-->
         <dependency>
