--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>guru.learningjournal.kafka.examples</groupId>
-    <artifactId>hello-streams</artifactId>
+    <groupId>someshbose.github.io</groupId>
+    <artifactId>kafka-streams-example</artifactId>
     <version>2.3.0</version>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.4.5</version>
+        <relativePath/>
+    </parent>
 
     <properties>
         <java.version>1.8</java.version>
@@ -29,6 +36,10 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
         <!-- Apache Kafka Clients-->
         <dependency>
             <groupId>org.apache.kafka</groupId>
